<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/produk"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvNamaproduk"
            style="@style/textJudul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/semen_dynamix_40kg"
            app:layout_constraintEnd_toEndOf="parent"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        <TextView
            android:id="@+id/tvgrosir"
            android:background="@drawable/bg_grosir"
            style="@style/textgrosir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grosir"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvNamaproduk" />

        <TextView
            android:id="@+id/tvDiskon"
            style="@style/textdiskon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_diskon"
            android:padding="5dp"
            android:text="@string/persentase"
            android:layout_marginHorizontal="10dp"
            app:layout_constraintStart_toEndOf="@+id/tvgrosir"
            app:layout_constraintTop_toBottomOf="@+id/tvNamaproduk" />

        <TextView
            android:id="@+id/tvhargapotongan"
            style="@style/textBody"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvgrosir" />

        <TextView
            android:id="@+id/tvHarga"
            style="@style/textJudul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/harga"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvhargapotongan" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>